Fri Mar 17 10:56:17 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc (do_tag): Use case insensitive parsing of META
	robots tag content.
	* htlib/String.cc (uppercase): Fix misplaced cast for islower().

Mon Mar  6 17:31:37 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/htsearch.cc (setupWords): Don't allow comma as string
	list separator, as it can be a decimal point in some locales.

Mon Mar 06 00:58:00 2000  Loic Dachary  <loic@ceic.com>

	* db/mp/mp_bh.c (__memp_bhfree): always free the chain, if
	  any. The bh is reset to null after free and we loose the
	  pointer anyway, finally filling the pool with it.

	* db/mp/mp_cmpr.c (__memp_cmpr_write): i < CMPR_MAX - 1 instead of
	  i < CMPR_MAX otherwise go beyond array limits. This fixes a 
	  major problem when handling large files.

Sat Mar 04 19:41:49 2000  Loic Dachary  <loic@ceic.com>

	* db/mp/mp_cmpr.c (__memp_cmpr_free_chain): clear BH_CMPR
	  flag. Was causing core dumps, thanks to 
	  Peter Marelas maral@phase-one.com.au for providing 
	  a simple case to reproduce the error.

Fri Mar  3 11:32:34 2000 CEST Gabriele Bartolini  <g.bartol@comune.prato.it>

	* Fixed bugs regarding yesterday's changes. Even Leonardo da Vinci
	  used to commit errors, so  ...

Fri Mar  3 11:25:42 2000 CEST Gabriele Bartolini  <g.bartol@comune.prato.it>

	* testnet.cc: added the -r and -w options in order to set how many
	  times it retries to re-connect after a timeout occurs, and how long
	  it should wait after it.

Thu Mar  2 18:45:15 2000 CEST Gabriele Bartolini  <g.bartol@comune.prato.it>

	* htnet/Connection.*: management of wait_time and number of retries
          after a timeout occurs.

        * htnet/Transport.*: Management of connection attributes above.

        * htdig/Server.*: Set members for managing timeout retries taken from
          the configuration file ("timeout", "tcp_max_retries", "tcp_wait_time").
          